# off2pcd

./: CMakeLists.txt  LICENSE  README.md  install.sh  main.cpp  run.sh
.build/: CMakeCache.txt  Makefile  cmake_install.cmake  file.pcd  main
include/: cg.hpp  linalg.hpp  offparser.hpp  writter.hpp
